--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -105,7 +105,7 @@ if (!empty($this->nomeCliente))
             <div id="EnglobaPesquisaInicio">
                 <!--input type="button" id="filtroResult" value="Filtrar Por &#8628;"-->
                <input class="form-control" type="textarea" name="criterio" id="pesquisaInicio"  
-                       value="<?php echo !empty($this->pesquisa_facapedido_criterio) ? $this->pesquisa_facapedido_criterio : '' ?>" placeholder="Ingredientes específicos, lugares, pratos..."><input class="btn btn-primary" id="botaoPesquisar" type="submit" 
+                       value="<?php echo !empty($this->pesquisa_facapedido_criterio) ? $this->pesquisa_facapedido_criterio : '' ?>" placeholder="Ingredientes especÃ­ficos, lugares, pratos..."><input class="btn btn-primary" id="botaoPesquisar" type="submit" 
                        value="BUSCAR">
               <span class="filterexpand"> Mais opcoes de filtro</span>
             </div>
@@ -116,7 +116,7 @@ if (!empty($this->nomeCliente))
                             <div  class="margbtm">
                 <?php
                 //formData2 eh um array comecando do indice 0 e contendo os codigos de tipos de produtos que a empresa trabalha
-                //cod_tipo_produto é um array cujo indices sao os cod_tipo_produto e o conteudo o nome do tipo. Contem todos os tipos produtos existentes.
+                //cod_tipo_produto Ã© um array cujo indices sao os cod_tipo_produto e o conteudo o nome do tipo. Contem todos os tipos produtos existentes.
                 $i = 0;
                 foreach (array_keys($this->cod_tipo_produto) as $cod_tipo_produto) {
                     $checked = " ";
@@ -128,19 +128,19 @@ if (!empty($this->nomeCliente))
 
                 <?php } ?>
                      </div>
-                <!--p class="lead new_heading">Culinária:</p-->
+                <!--p class="lead new_heading">CulinÃ¡ria:</p-->
                 
-                <font class="lead">Valor calórico até: </font><input  type="text" name="caloria" style="width:50" value="<?php echo $this->pesquisa_facapedido_caloria; ?>">
+                <font class="lead">Valor calorico ate: </font><input  type="text" name="caloria" style="width:50" value="<?php echo $this->pesquisa_facapedido_caloria; ?>">
                 <br>
                 <br>
 
                 <p class="lead">Listar apenas estabelecimentos que oferecem: </p>
 
-                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('diabetico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="diabetico" class=""> Produto especial para diabético<br>
+                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('diabetico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="diabetico" class=""> Produto especial para diabÃ©tico<br>
                 <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('pouco_sal', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="pouco_sal" class=""> Produto com pouco sal<br>
-                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('sem_glutem', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="sem_glutem" class=""> Produto sem glútem<br>
+                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('sem_glutem', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="sem_glutem" class=""> Produto sem glÃºtem<br>
                 <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('lactose', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="lactose" class=""> Produto sem lactose<br>
-                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('organico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="organico" class=""> Produto orgânico<br>
+                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('organico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="organico" class=""> Produto orgÃ¢nico<br>
                 <input type="button" id="confirmaFiltro" value="&#10004; Ok">	
                 
             </div>
@@ -223,7 +223,7 @@ if (!empty($this->nomeCliente))
                         <p><?php  //echo $this->resultado[$i]["razao_social"];  
                             
                             
-                             //Sempre há pelo menos um tamanho, entao imprime esse
+                             //Sempre hÃ¡ pelo menos um tamanho, entao imprime esse
                     if (!empty($this->resultado[$i]['preco_promocional'])) {
                     
                         $preco = (double) $this->resultado[$i]['preco_promocional'];
@@ -291,8 +291,8 @@ if (!empty($this->nomeCliente))
                 } else {
                     $hora_atual = date('H') . ":" . date('i') . ":00";
 
-                    echo "<input type='button' class='btn btn-danger' value='Fechada nesse horário'  onClick='javascript:lojaFechada(" . $this->resultado[$i]['cod_empresa'] . "," . $i . " );' > " .
-                    " <br> <span class='msg_estabelecimento_fechado' id='spanFechada" . $i . "'>Clique no botão se deseja enviar à loja sua vontade " .
+                    echo "<input type='button' class='btn btn-danger' value='Fechada nesse horÃ¡rio'  onClick='javascript:lojaFechada(" . $this->resultado[$i]['cod_empresa'] . "," . $i . " );' > " .
+                    " <br> <span class='msg_estabelecimento_fechado' id='spanFechada" . $i . "'>Clique no botÃ£o se deseja enviar Ã  loja sua vontade " .
                     " de que ela estivesse aberta. </span> ";
                 }
                 echo " </div> \n";
@@ -339,8 +339,8 @@ if (!empty($this->nomeCliente))
             $hora_atual = date('H') . ":" . date('i') . ":00";
             echo "<div>";
 
-            echo "<input type='button' class='btn btn-danger' value='Fechada nesse horário'  onClick='javascript:lojaFechada(" . $this->resultado[$i]['cod_empresa'] . "," . $i . " );' > " .
-            " <br> <span class='msg_estabelecimento_fechado' id='spanFechada" . $i . "'>Clique no botão se deseja enviar à loja sua vontade " .
+            echo "<input type='button' class='btn btn-danger' value='Fechada nesse horÃ¡rio'  onClick='javascript:lojaFechada(" . $this->resultado[$i]['cod_empresa'] . "," . $i . " );' > " .
+            " <br> <span class='msg_estabelecimento_fechado' id='spanFechada" . $i . "'>Clique no botÃ£o se deseja enviar Ã  loja sua vontade " .
             " de que ela estivesse aberta. </span> ";
         }
 
