--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -291,8 +291,8 @@ if (!empty($this->nomeCliente))
                 } else {
                     $hora_atual = date('H') . ":" . date('i') . ":00";
 
-                    echo "<input type='button' class='btn btn-danger' value='Fechada nesse horÃ¡rio'  onClick='javascript:lojaFechada(" . $this->resultado[$i]['cod_empresa'] . "," . $i . " );' > " .
-                    " <br> <span class='msg_estabelecimento_fechado' id='spanFechada" . $i . "'>Clique no botÃ£o se deseja enviar Ã  loja sua vontade " .
+                    echo "<input type='button' class='btn btn-danger' value='Fechada nesse horario'  onClick='javascript:lojaFechada(" . $this->resultado[$i]['cod_empresa'] . "," . $i . " );' > " .
+                    " <br> <span class='msg_estabelecimento_fechado' id='spanFechada" . $i . "'>Clique aqui se deseja enviar &agrave; loja sua vontade " .
                     " de que ela estivesse aberta. </span> ";
                 }
                 echo " </div> \n";
