--- a/whattoeat/public/css/style.css
+++ b/whattoeat/public/css/style.css
@@ -442,15 +442,16 @@ legend{
   left: -8%;
 }
 .close_result_btn a.close {
-    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.7);
-    border-radius: 50%;
-    font-size: 0;
-    height: 50px;
-    position: absolute;
-    right: 16%;
-    top: -28px;
-    width: 50px;
-    z-index: 0;}
+  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.7);
+  border-radius: 50%;
+  font-size: 0;
+  height: 50px;
+  position: absolute;
+  right: 18%;
+  top: -28px;
+  width: 50px;
+  z-index: 0;
+}
 .close_result_btn a.close span.close {
   background: none repeat scroll 0 0 rgb(255, 255, 255);
   display: inherit;
@@ -520,14 +521,20 @@ legend{
   width: 500px;
 }
 */
-
 .bottom-menu {
   background: none repeat scroll 0 0 rgba(255, 255, 255, 0.7);
-  bottom: 0;
+  height: auto;
   margin: auto;
+  overflow: hidden;
   position: absolute;
   right: 0;
-  width: 347px;
+  top: 285px;
+  width: 368px;
+}
+.scrolad{
+      height: 445px;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 #tableListaPedido td{
       font-size: 14px;
@@ -638,6 +645,15 @@ legend{
 
 
 @media(max-width:1280px) {
+            .bottom-menu {
+ 
+  bottom: 0;
+  top:unset;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  width: 347px;
+}
      .buscar_outer_dv {
   height: 500px;
   overflow: scroll;
@@ -681,6 +697,7 @@ float:left;
 
 }
 @media(max-width:991px) {
+
     .filter_result {
   
   width: 265px;
@@ -709,6 +726,7 @@ float:left;
 }
 }
 @media(max-width:800px) {
+
     .imgtext {
   
   width: 300px;
