--- a/whattoeat/public/css/style.css
+++ b/whattoeat/public/css/style.css
@@ -645,27 +645,20 @@ legend{
 
 
 @media(max-width:1280px) {
-            .bottom-menu {
- 
-  bottom: 0;
-  top:unset;
+.bottom-menu {
   margin: auto;
   position: absolute;
   right: 0;
-  width: 347px;
+  top: 335px;
+  width: 320px;
 }
+          
      .buscar_outer_dv {
   height: 500px;
   overflow: scroll;
   width: 60%;
 }
-    .close_result_btn {
-  left: 0;
-  margin: auto auto 112px;
-  position: relative;
-  right: 15px;
-  width: 90%;
-}
+ 
     .buscar_outer_dv {
   width: 100% !important;
 }
@@ -693,10 +686,32 @@ float:left;
 .close_result_btn a.close {
   right: 0;
 }
-
+.close_result_btn {
+  left: -159px;
+  margin: auto auto 111px;
+  position: relative;
+  right: 107px;
+  width: 74%;
+}
 
 }
 @media(max-width:991px) {
+       .close_result_btn {
+  left: 0;
+  margin: auto auto 112px;
+  position: relative;
+  right: 15px;
+  width: 90%;
+}
+      .bottom-menu {
+ 
+  bottom: 0;
+  top:unset;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  width: 347px;
+}
 
     .filter_result {
   
