--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -193,7 +193,7 @@ if (!empty($this->nomeCliente))
         <h4> Seu pedido </h4>
 
         
-    <div style="display:none" id="RemoveAdd">
+    <div id="RemoveAdd">
 
         <form action="/portal/index/limpar-Carrinho" method="post" class="" >
             <div class="warning_btn" style="float: right; position: relative; ">
