--- a/whattoeat/application/modules/estabelecimento/views/scripts/produto/index.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/produto/index.phtml
@@ -552,7 +552,7 @@
                 app_div = '<div class="ingredientpage"><input style="display:none" type="checkbox" checked="checked" name="ie[cod_ingrediente][]" value="' + item_id + '">';
                 app_div += '<div align="left" class="td-wid"><span class="item_label">' + item_label + '</span>';
                 app_div += '<input type="text" style="width: 200px;" value="" name="ie[quantidade_utilizada][' + item_id + ']" title="" class="input-medium validDecimalNumber form-control">';
-                app_div += '<div class="del_ingredient"><img src="http://whattoeat.com/img/Erase.png"><input type="hidden" name="ie[valor_calorico][' + item_id + ']"></div>';
+                app_div += '<div class="del_ingredient"><img src="/img/Erase.png"><input type="hidden" name="ie[valor_calorico][' + item_id + ']"></div>';
                 app_div += '<div class="bodyTextSmall"> <span class="tip"></span> <span class="missing"></span></div></div>';
 
 
